Fix the scrolling related bug on mobile devices. Add particle animation on the header.

--- a/wp-content/themes/portfolio/scss/common.scss
+++ b/wp-content/themes/portfolio/scss/common.scss
@@ -17,6 +17,10 @@ reproduced or used in any manner whatsoever.
 /* ==============
    Common styles
   ============= */
+.fixBackground {
+  overflow: hidden;
+}
+
 .animation {
   opacity: 0;
 }
